[project]
name = "traffic-problem-berlin"
version = "0.1.0"
description = ""
authors = [
    {name = "kkateled",email = "lediaevak2001@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tweepy (>=4.15.0,<5.0.0)",
    "googletrans (>=4.0.2,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "python-telegram-bot[job-queue] (>=21.10,<22.0)",
    "pytz (>=2025.1,<2026.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "lxml (>=5.3.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
